# intelligent-doc-processing

./: CLAUDE.md  README.md  evaluation_report.json  pyproject.toml  verify_implementation.py
datasets/: sample_invoice.txt  sample_receipt.txt
scripts/: run_evaluation.py
src/idp/: __init__.py  cli.py
src/idp/agents/: __init__.py  base.py
src/idp/agents/classification/: __init__.py  agent.py  models.py  prompts.py
src/idp/agents/extraction/: __init__.py  agent.py  models.py  prompts.py  schemas.py
src/idp/agents/validation/: __init__.py  agent.py  models.py  rules.py
src/idp/core/: __init__.py  config.py  exceptions.py  logging.py  retry.py
src/idp/evaluation/: __init__.py  framework.py  metrics.py
src/idp/llm/: __init__.py  client.py
src/idp/llm/bedrock/: __init__.py  client.py
src/idp/llm/mock/: __init__.py  client.py
src/idp/models/: __init__.py  document.py  extraction.py  workflow.py
src/idp/orchestration/: __init__.py  engine.py  graph.py  workflows.py
src/idp/services/: bedrock.py
src/idp/storage/: __init__.py  base.py  local.py  memory.py
tests/: __init__.py  conftest.py  test_agents.py  test_core.py  test_extraction.py  test_llm.py  test_models.py  test_orchestration.py  test_validation.py
